# ipp-sharing2

./: .gitignore  README.md  build_stubs.ps1  patch_ipp.py  ws2hook.c  ws2hook.def  ws2hook.exp  ws2hook.lib  ws2hook_mingw.c
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  dnssd.rs  handler.rs  ipp_service.rs  lib.rs  print_options.rs  raster.rs
core/src/attr/: ipp_sys_predefined_map.rs  media_name.rs  media_size.rs  mod.rs  orientation.rs  print_color_mode.rs  printer_resolution.rs  sides.rs
gui/: Cargo.toml
gui/src/: main.rs
stubs/: bcrypt_stub.c  bcrypt_stub.def  combase_stub.c  combase_stub.def  synch_stub.c  synch_stub.def  winpdf_stub.c  winrt_error_stub.c  winrt_stub.c
