[package]
authors = ["ArcticLampyrid <ArcticLampyrid@outlook.com>"]
edition = "2021"
name = "ipp-sharing"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
log = "0.4"
flexi_logger = "0.31"
ipp-sharing-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
