[package]
authors = ["ArcticLampyrid <ArcticLampyrid@outlook.com>"]
edition = "2021"
name = "ipp-sharing-gui"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
log = "0.4"
ipp-sharing-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
eframe = "0.34"
egui_tracing = "0.3"
tracing = { version = "0.1", default-features = false }
humantime = "2.3.0"
